--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -4,7 +4,7 @@
   text-align: center;
   background-image: url('../assets/images/mountain-1.jpg');
   background-size: cover;
-  min-height: 100vh;
+  height: 100vh;
   overflow-y: auto;
 }
 
