--- a/src/styles/Blog.css
+++ b/src/styles/Blog.css
@@ -1,25 +1,25 @@
 .blog-container {
-    padding: 40px;
+    padding: 40px 20px;
     text-align: center;
     background-image: url('../assets/images/mountain-1.jpg');
     background-size: cover;
     height: 100vh;
+    overflow-y: auto;
   }
   
   .blog-background {
     background-color: rgba(246, 249, 252, 0.932); /* White background with some transparency */
-    padding: 50px;
+    padding: 40px;
     border-radius: 10px;
     width: 100%;
     max-width: 900px;
     margin: 0 auto;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    height: 84vh;
   }
 
   .blog-title {
     font-size: 2.5rem;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
   }
   
   .posts-container {
